--- a/index.html
+++ b/index.html
@@ -2,253 +2,255 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Harish Mukkara</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
-        integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
-    <!-- <link rel="stylesheet" href="css/debug.css"> -->
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>Harish Mukkara</title>
+	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+		integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+	<!-- <link rel="stylesheet" href="css/debug.css"> -->
 </head>
 
 <body>
-    <div class="hero">
-        <div class="proimage">
-            <img src="assets/harish_mukkara.jpg" width="150px" height="150px"
+	<div class="hero">
+		<div class="proimage">
+			<img src="assets/harish_mukkara.jpg" width="150px" height="150px"
                 alt="harish_mukkara profile image. harishmukkara.ml">
         </div>
 
-        <div class="center">
-            <h1>Harish Mukkara</h1>
-            <h4>Full stack Developer, Final year student at JNTUACEP.</h4>
-        </div>
-        <!-- social card -->
-        <div class="card">
-            <span class="card-title">Social</span>
+			<div class="center">
+				<h1>Harish Mukkara</h1>
+				<h4>Full stack Developer, Intern(engieering) at <a
+						href="https://yellowmessenger.com/">Yellowmessenger</a></h4>
+			</div>
+			<!-- social card -->
+			<div class="card">
+				<span class="card-title">Social</span>
 
-            <!-- tiwtter  -->
-            <div class="card-item">
+				<!-- tiwtter  -->
+				<div class="card-item">
 
-                <div class="item-icon twitter">
-                    <i class="fab fa-twitter-square fa-2x"></i>
-                </div>
+					<div class="item-icon twitter">
+						<i class="fab fa-twitter-square fa-2x"></i>
+					</div>
 
-                <div class="item-body">
-                    <div class="item-head">
-                        <a href="https://twitter.com/HariMukkara"> Twitter </a>
-                    </div>
+					<div class="item-body">
+						<div class="item-head">
+							<a href="https://twitter.com/HariMukkara"> Twitter </a>
+						</div>
 
-                    <!-- <div class="item-description">
+						<!-- <div class="item-description">
                         item item-description of the head
                     </div> -->
-                </div>
-            </div>
+					</div>
+				</div>
 
-            <!-- linkedin  -->
-            <div class="card-item">
+				<!-- linkedin  -->
+				<div class="card-item">
 
-                <div class="item-icon facebook">
-                    <i class="fab fa-linkedin fa-2x"></i>
-                </div>
+					<div class="item-icon facebook">
+						<i class="fab fa-linkedin fa-2x"></i>
+					</div>
 
-                <div class="item-body">
-                    <div class="item-head">
-                        <a href="https://www.linkedin.com/in/harishmukkara/"> LinkedIn </a>
-                    </div>
+					<div class="item-body">
+						<div class="item-head">
+							<a href="https://www.linkedin.com/in/harishmukkara/"> LinkedIn </a>
+						</div>
 
-                    <!-- <div class="item-description">
+						<!-- <div class="item-description">
                         item item-description of the head
                     </div> -->
-                </div>
-            </div>
+					</div>
+				</div>
 
-            <!-- Github  -->
-            <div class="card-item">
+				<!-- Github  -->
+				<div class="card-item">
 
-                <div class="item-icon twitter">
-                    <i class="fab fa-github-square fa-2x"></i>
-                </div>
+					<div class="item-icon twitter">
+						<i class="fab fa-github-square fa-2x"></i>
+					</div>
 
-                <div class="item-body">
-                    <div class="item-head">
-                        <a href="https://github.com/hy505"> Github </a>
-                    </div>
+					<div class="item-body">
+						<div class="item-head">
+							<a href="https://github.com/hy505"> Github </a>
+						</div>
 
-                    <!-- <div class="item-description">
+						<!-- <div class="item-description">
                         item item-description of the head
                     </div> -->
-                </div>
-            </div>
-        </div>
+					</div>
+				</div>
+			</div>
 
-        <!-- skill card -->
-        <div class="card">
-            <span class="card-title">
+			<!-- skill card -->
+			<div class="card">
+				<span class="card-title">
                 skills
             </span>
 
-            <!-- php  -->
-            <div class="card-item">
+				<!-- php  -->
+				<div class="card-item">
 
-                <div class="item-icon php">
-                    <i class="fab fa-php fa-2x"></i>
-                </div>
-                <div class="item-body">
-                    <div class="item-head">
-                        <a href="https://github.com/hy505?utf8=%E2%9C%93&tab=repositories&q=&type=&language=php"> Php
-                        </a>
-                    </div>
+					<div class="item-icon php">
+						<i class="fab fa-php fa-2x"></i>
+					</div>
+					<div class="item-body">
+						<div class="item-head">
+							<a href="https://github.com/hy505?utf8=%E2%9C%93&tab=repositories&q=&type=&language=php">
+								Php
+							</a>
+						</div>
 
-                    <div class="item-description">
-                        Since 11/11/2018. Currently playing with Codeigniter.
-                    </div>
-                </div>
-            </div>
+						<div class="item-description">
+							Since 11/11/2018. Currently playing with Codeigniter.
+						</div>
+					</div>
+				</div>
 
-            <!-- python  -->
-            <div class="card-item">
+				<!-- python  -->
+				<div class="card-item">
 
-                <div class="item-icon python">
-                    <i class="fab fa-python fa-2x"></i>
-                </div>
-                <div class="item-body">
-                    <div class="item-head">
-                        <a href="https://github.com/hy505?utf8=%E2%9C%93&tab=repositories&q=&type=&language=python">
-                            Python
-                        </a>
-                    </div>
+					<div class="item-icon python">
+						<i class="fab fa-python fa-2x"></i>
+					</div>
+					<div class="item-body">
+						<div class="item-head">
+							<a href="https://github.com/hy505?utf8=%E2%9C%93&tab=repositories&q=&type=&language=python">
+								Python
+							</a>
+						</div>
 
-                    <div class="item-description">
-                        Since 01/06/2017. Mostly for automation of my tasks and web scraping.
-                    </div>
-                </div>
-            </div>
+						<div class="item-description">
+							Since 01/06/2017. Mostly for automation of my tasks and web scraping.
+						</div>
+					</div>
+				</div>
 
-            <!-- javascript  -->
-            <div class="card-item">
+				<!-- javascript  -->
+				<div class="card-item">
 
-                <div class="item-icon javascript">
-                    <i class="fab fa-js-square fa-2x"></i>
-                </div>
-                <div class="item-body">
-                    <div class="item-head">
-                        <a href="https://github.com/hy505?utf8=✓&tab=repositories&q=&type=&language=javscript">
-                            JavaScript
-                        </a>
-                    </div>
+					<div class="item-icon javascript">
+						<i class="fab fa-js-square fa-2x"></i>
+					</div>
+					<div class="item-body">
+						<div class="item-head">
+							<a href="https://github.com/hy505?utf8=✓&tab=repositories&q=&type=&language=javscript">
+								JavaScript
+							</a>
+						</div>
 
-                    <div class="item-description">
-                        Trying to become an expert. worked with jQuery, Now Vue.js
-                    </div>
-                </div>
-            </div>
+						<div class="item-description">
+							Trying to become an expert. worked with jQuery, Now Vue.js
+						</div>
+					</div>
+				</div>
 
-            <!-- css  -->
-            <div class="card-item">
+				<!-- css  -->
+				<div class="card-item">
 
-                <div class="item-icon css">
-                    <i class="fab fa-css3-alt fa-2x"></i>
-                </div>
-                <div class="item-body">
-                    <div class="item-head">
-                        <a href="https://github.com/hy505?utf8=✓&tab=repositories&q=&type=&language=css">
-                            CSS
-                        </a>
-                    </div>
+					<div class="item-icon css">
+						<i class="fab fa-css3-alt fa-2x"></i>
+					</div>
+					<div class="item-body">
+						<div class="item-head">
+							<a href="https://github.com/hy505?utf8=✓&tab=repositories&q=&type=&language=css">
+								CSS
+							</a>
+						</div>
 
-                    <div class="item-description">
-                        Bootstrap, Bulma. now Tailwindcss
-                    </div>
-                </div>
-            </div>
+						<div class="item-description">
+							Bootstrap, Bulma. now Tailwindcss
+						</div>
+					</div>
+				</div>
 
-            <!-- html  -->
-            <div class="card-item">
+				<!-- html  -->
+				<div class="card-item">
 
-                <div class="item-icon html">
-                    <i class="fab fa-html5 fa-2x"></i>
-                </div>
-                <div class="item-body">
-                    <div class="item-head">
-                        <a href="https://github.com/hy505?utf8=✓&tab=repositories&q=&type=&language=html">
-                            HTML
-                        </a>
-                    </div>
+					<div class="item-icon html">
+						<i class="fab fa-html5 fa-2x"></i>
+					</div>
+					<div class="item-body">
+						<div class="item-head">
+							<a href="https://github.com/hy505?utf8=✓&tab=repositories&q=&type=&language=html">
+								HTML
+							</a>
+						</div>
 
-                    <div class="item-description">
-                        Kidding me? are you?
-                    </div>
-                </div>
-            </div>
+						<div class="item-description">
+							Kidding me? are you?
+						</div>
+					</div>
+				</div>
 
 
-        </div>
+			</div>
 
-        <!-- projects card -->
-        <div class="card">
-            <span class="card-title">
+			<!-- projects card -->
+			<div class="card">
+				<span class="card-title">
                 Projects
             </span>
 
-            <!-- pubgwarfield  -->
-            <div class="card-item">
+				<!-- pubgwarfield  -->
+				<div class="card-item">
 
-                <div class="item-icon">
-                    <i class="fas fa-gamepad fa-2x"></i>
-                </div>
-                <div class="item-body">
-                    <div class="item-head">
-                        <a href="https://pubgwarfield.in"> Pubg Warfield
-                        </a>
-                    </div>
+					<div class="item-icon">
+						<i class="fas fa-gamepad fa-2x"></i>
+					</div>
+					<div class="item-body">
+						<div class="item-head">
+							<a href="https://pubgwarfield.in"> Pubg Warfield
+							</a>
+						</div>
 
-                    <div class="item-description">
-                        An online platform for pubg players to earn money by playing.
-                    </div>
-                </div>
-            </div>
+						<div class="item-description">
+							An online platform for pubg players to earn money by playing.
+						</div>
+					</div>
+				</div>
 
-            <div class="card-item">
+				<div class="card-item">
 
-                <div class="item-icon python">
-                    <i class="fab fa-python fa-2x"></i>
-                </div>
-                <div class="item-body">
-                    <div class="item-head">
-                        <a href="https://www.quora.com/q/vyhvwvrsmrmmhnyb"> Quora TOP Writers
-                        </a>
-                    </div>
+					<div class="item-icon python">
+						<i class="fab fa-python fa-2x"></i>
+					</div>
+					<div class="item-body">
+						<div class="item-head">
+							<a href="https://www.quora.com/q/vyhvwvrsmrmmhnyb"> Quora TOP Writers
+							</a>
+						</div>
 
-                    <div class="item-description">
-                        This is awesome. I make this TOP writers by scrapping thousands of pages from Quora.
-                        I use IP proxy servers too (luminati.io), for this work.
-                    </div>
-                </div>
-            </div>
-            <div class="card-item">
+						<div class="item-description">
+							This is awesome. I make this TOP writers by scrapping thousands of pages from Quora.
+							I use IP proxy servers too (luminati.io), for this work.
+						</div>
+					</div>
+				</div>
+				<div class="card-item">
 
-                <div class="item-icon javascript">
-                    <i class="fas fa-university fa-2x"></i>
-                </div>
-                <div class="item-body">
-                    <div class="item-head">
-                        <a href="https://jntuacep.ac.in"> JNTUACEP website
-                        </a>
-                    </div>
+					<div class="item-icon javascript">
+						<i class="fas fa-university fa-2x"></i>
+					</div>
+					<div class="item-body">
+						<div class="item-head">
+							<a href="https://jntuacep.ac.in"> JNTUACEP website
+							</a>
+						</div>
 
-                    <div class="item-description">
-                        I along with my other <a href="https://github.com/praneeth14">mate</a>, design,develp and
-                        maintain our college website.
-                    </div>
-                </div>
-            </div>
-        </div>
+						<div class="item-description">
+							I along with my other <a href="https://github.com/praneeth14">mate</a>, design,develp and
+							maintain our college website.
+						</div>
+					</div>
+				</div>
+			</div>
 
-    </div>
-    <div style="text-align:center;color:#aaa;font-size: .75rem;text-transform: uppercase;">
-        <p>Site Last updated: 14-08-2019</p>
-    </div>
+		</div>
+		<div style="text-align:center;color:#aaa;font-size: .75rem;text-transform: uppercase;">
+			<p>Site Last updated: 14-08-2019</p>
+		</div>
 </body>
 
 </html>
