--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 						</div>
 
 						<div class="item-description">
-							Since 11/11/2018. Currently playing with Codeigniter.
+							Codeigniter and Laravel develper.
 						</div>
 					</div>
 				</div>
@@ -122,7 +122,7 @@
 						</div>
 
 						<div class="item-description">
-							Since 01/06/2017. Mostly for automation of my tasks and web scraping.
+							Mostly for automation of my tasks and web scraping. I was paid $200 by a German customer for scraping work.
 						</div>
 					</div>
 				</div>
@@ -141,7 +141,7 @@
 						</div>
 
 						<div class="item-description">
-							Trying to become an expert. worked with jQuery, Now Vue.js
+							Worked with jQuery, Now Vue.js and Node.js(backend)
 						</div>
 					</div>
 				</div>
