--- a/customCheckBox.html
+++ b/customCheckBox.html
@@ -172,16 +172,7 @@
                 if (payload.length == 0) {
                     $('#error').addClass('show');
                 } else {
-                    window.parent.postMessage(JSON.stringify({
-                        event_code: 'ym-client-event', data: JSON.stringify({
-                            event: {
-                                code: "issues",
-                                data: {
-                                    payload
-                                }
-                            }
-                        })
-                    }), '*');
+                    window.parent.postMessage(JSON.stringify({"harish":123}), '*');
                     $('#submit').attr('disabled', 'disabled');
                     $('#wrapper').addClass('show');
                 }
